include/C/jdmath.h

/*============================ typedefs ====================================*/
struct ranState;									 /* forward declaration */
struct ranState
{
	int 			iSeedPM;
	unsigned int 	uiSeed1GM, uiSeed2GM;
	unsigned int 	uiSeed1LE, uiSeed2LE, uiSeed3LE, uiSeed4LE;
	unsigned int 	uiStateMWC, uiCarryMWC, auiStateMWC[JDRAN_MWC_R + 1];
	double 			adZigX[JDRAN_ZIGNOR_C + 1], adZigR[JDRAN_ZIGNOR_C];
	BOOL 			fNormalInStore;
	UIRANFUN 		fnUIRanu;
	DRANFUN 		fnDRanu, fnDRann;
	MATRANFUN  		fnMatRanu, fnMatRann;
	RANSETSEEDFUN 	fnRanSetSeed;
	RANGETSEEDFUN 	fnRanGetSeed;
	RANCLRSEEDFUN 	fnRanClrSeed;
};
/* mtmatrix.c */
void   JDCALL SetInvertEps(double dEps);
VECTOR JDCALL VecTranspose(VECTOR vA, int cM, int cN);
/* mtband.h */
int    JDCALL ToeplitzSolve(VECTOR, int, int, MATRIX, int, VECTOR v_1);
void   JDCALL RanInit(struct ranState *pRan);
void   JDCALL RanSetSeed(int *piSeed, int cSeed);
int    JDCALL RanGetSeed(int *piSeed, int cSeed);
void   JDCALL RanSetRan(const char *sRan);
void   JDCALL RanDirichlet(VECTOR vX, VECTOR vAlpha, int cAlpha);
void   JDCALL RanSubSample(VECTOR vU, int cU, int cN);
void   JDCALL RanUorder(VECTOR vU, int cU);
void   JDCALL RanWishart(MATRIX mX, int cX, int cT);
VECTOR JDCALL VecDiscretize(VECTOR vY, int cY, double dMin, double dMax,
			VECTOR vDisc, int cM, VECTOR vT, int iOption);