include/C/ox/jdmatrix.h

#define VecDup(vSrc,cX) VecCopy(VecAlloc(cX), vSrc, cX)
void   JDCALL VecrCopyMat(VECTOR vDest, MATRIX mSrc, int cR, int cC);
void   JDCALL VeccCopyMat(VECTOR vDest, MATRIX mSrc, int cR, int cC);