include/C/ox/Ox.cs

	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void RanDirichlet(double[] vX, double[] vAlpha, Int32 cALpha);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 RanGetSeed(Int32[] piSeed, Int32 cSeed);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void RanInit();
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void RanNewRan(IntPtr fnDRanu, IntPtr fnRanSetSeed, IntPtr fnRanGetSeed);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void RanSetRan(string sRan);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void RanSetSeed(Int32[] piSeed, Int32 cSeed);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void RanSubSample(double[] vU, Int32 cU, Int32 cN);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void RanUorder(double[] vU, Int32 cU);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void RanWishart(IntPtr mX, Int32 cX);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void SetFastMath(Int32 fYes);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void SetInf(ref double pd);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void SetInvertEps(double dEps);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void SetNaN(ref double pd);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void ToeplitzSolve(double[] vR, Int32 cR, Int32 cM, IntPtr mB, Int32 cB, double[] v_1);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void VeccCopyMat(double[] vDest_c, IntPtr mSrc, Int32 cM, Int32 cN);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 VecDiscretize(double[] vY, Int32 cY, double dMin, double dMax, double[] vDisc, Int32 cM, double[] vT, Int32 iOption);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 VecDup(double[] vSrc, Int32 cM);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void VecrCopyMat(double[] vDest_r, IntPtr mSrc, Int32 cM, Int32 cN);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 VecTranspose(double[] vA, Int32 cM, Int32 cN);

// Ox run-time functionality
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FOxCallBack(IntPtr pvFunc, IntPtr rtn, IntPtr pv, Int32 cArg);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FOxCallBackMember(IntPtr pvClass, string sMember, IntPtr rtn, IntPtr pv, Int32 cArg);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FOxCreateObject(string sClass, IntPtr rtn, IntPtr pv, Int32 cArg);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FOxGetDataMember(IntPtr pvClass, string sMember, IntPtr rtn);

	public delegate void NewOxFunc(IntPtr rtn, IntPtr pv, int cArg);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FOxLibAddFunction(string sFunc, NewOxFunc pFunc, Int32 fVarArg);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FOxLibAddFunctionEx(string sFunc, NewOxFunc pFunc, Int32 cArgs, Int32 flFlags);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FOxRun(Int32 iMainIP, string sFunc);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 FOxSetDataMember(IntPtr pvClass, string sMember, IntPtr pv);

	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IOxRunInit();
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IOxVersion();
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IOxVersionIsProfessional();
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 IOxVersionOxo();

	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxCloneObject(IntPtr rtn, IntPtr pvObject, Int32 bDeep);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxDeleteObject(IntPtr pvClass);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxFnDouble(IntPtr rtn, IntPtr pv, IntPtr fn);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxFnDouble2(IntPtr rtn, IntPtr pv, IntPtr fn);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxFnDouble3(IntPtr rtn, IntPtr pv, IntPtr fn);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxFnDouble4(IntPtr rtn, IntPtr pv, IntPtr fn);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxFnDoubleInt(IntPtr rtn, IntPtr pv, IntPtr fn);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxFreeByValue(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxGetMainArgs(Int32[] pcArgc, ref string[] pasArgv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxGetOxArgs(Int32[] pcArgc, ref string[] pasArgv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxGetPrintlevel();
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxGetUserExitCode();

	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxLibArgError(Int32 iArg);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxLibArgTypeError(Int32 iArg, Int32 iExpected, Int32 iFound);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxLibCheckArrayMatrix(IntPtr pv, Int32 iFirst, Int32 iLast, IntPtr m);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxLibCheckMatrixSize(IntPtr pv, Int32 iFirst, Int32 iLast, Int32 r, Int32 c);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxLibCheckSquareMatrix(IntPtr pv, Int32 iFirst, Int32 iLast);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxLibCheckType(Int32 iType, IntPtr pv, Int32 iFirst, Int32 iLast);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxLibValArrayCalloc(IntPtr pv, Int32 c);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxLibValMatDup(IntPtr pv, IntPtr mSrc, Int32 r, Int32 c);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxLibValMatMalloc(IntPtr pv, Int32 r, Int32 c);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxLibValStrMalloc(IntPtr pv, Int32 c);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxLibValZero(IntPtr pv);

	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxMain(Int32 argc, string[] argv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern Int32 OxMainCmd(string sCommand);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxMainExit();
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxMainInit();
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxMakeByValue(IntPtr pv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxMessage(string s);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxPuts(string s);

	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxRunAbort(Int32 i);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxRunError(Int32 iErno, string sToken);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxRunErrorMessage(string s);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxRunExit();
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxRunMainExitCall(IntPtr fn);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxRunMessage(string s);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxRunWarningMessage(string sFunc, string sMsg);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxSetMainArgs(Int32 argc, string[] argv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxSetOxArgs(Int32 cArgc, string[] asArgv);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxSetPrintlevel(Int32 iSet);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern IntPtr OxStoreCreate(Int32 c);
	[DllImport("OxWin", CharSet = CharSet.Ansi, ExactSpelling = true)]
		public static extern void OxStoreDelete(IntPtr pv, Int32 c);
